--- a/src/admin.html
+++ b/src/admin.html
@@ -4,31 +4,50 @@
     <meta charset="UTF-8">
     <title>管理页面</title>
     <link href="./css/default.css" rel="stylesheet">
-
 </head>
-<body>
 
+<body>
     <div class="page">
-        <aside>
-            <div class="newSong"></div>
-            <div id="songList-container"></div>
-            <div class="uploadArea">
-                <div id="uploadContainer" class="draggable">
-                    <div id="uploadButton" class="clickable">
-                        <p>点击或拖曳文件</p>
-                        <p>文件大小不能超过40MB</p>
+        <div class="title">我的音乐云盘</div>
+        <main>
+            <aside>
+                <button id="newSongClick">新建歌曲</button>
+                <button id="changeSongClick" disabled="disabled">编辑歌曲</button>
+                <!--<button disabled="disabled">删除歌曲</button>-->
+                <div class="uploadArea">
+                    <div id="uploadContainer" class="draggable">
+                        <div id="uploadButton" class="clickable">
+                            <p>上传歌曲</p>
+                            <p>点击或拖曳文件</p>
+                            <p>文件大小不能超过40MB</p>
+                        </div>
                     </div>
                 </div>
+            </aside>
+            <div class="music">
+                <table class="title">
+                    <tr>
+                        <th>序号</th>
+                        <th>歌名</th>
+                        <th>歌手</th>
+                        <th>专辑</th>
+                        <th>格式</th>
+                        <th>大小</th>
+                        <th>上传时间</th>
+                    </tr>
+                </table>
+                <div class="songList-container">
+                </div>
             </div>
-        </aside>
-        <main>
         </main>
+        <div id="songFormArea">
+            <div id="songForm"></div>
+        </div>
     </div>
 
     <div id="siteLoading" class="site-loading"></div>
-    <div id="uploadStatus"></div>
 
-    <audio controls src="http://p5y24q2r0.bkt.clouddn.com/%E5%91%A8%E6%9D%B0%E4%BC%A6%20-%20%E4%B8%83%E9%87%8C%E9%A6%99.mp3"></audio>
+    <!--<audio controls src="http://p5y24q2r0.bkt.clouddn.com/%E5%91%A8%E6%9D%B0%E4%BC%A6%20-%20%E4%B8%83%E9%87%8C%E9%A6%99.mp3"></audio>-->
 
     <script src="../node_modules/leancloud-storage/dist/av-min.js"></script>
     <script src="./js/initializers/av.js"></script>
